--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-deferred": "^1.0.1",
-    "jquery": "^3.5.1",
-    "lightweight-charts": "^3.0.1",
     "node": "^14.4.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-chartjs-2": "^2.9.0",
-    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.8"
+    "react-use": "^15.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
